--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@ www.4happy-studio.com -->
               </a>
               <div class="card-body text-center">
                 <h5 class="card-title"><b>Tausiah Bersama Ustaz Yusuf Mansur</b></h5>
-                <p class="card-text">15-45 - 16.45 WIB</p>
+                <p class="card-text">15-45 - 16.45 WIB Tausiah Kepri Syahfest 2020</p>
               </div>
               <div class="card-footer">
                 <a href="https://youtu.be/-l15h5dPsEw" class="btn btn-lg btn-block btn-outline-dark btn-square align-items-center">Masuk</a>
