--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@ www.4happy-studio.com -->
             <div id="filters" class="filters">
               <a href="#" data-filter=".3d" class="active"><b>Semua</b></a>
               <a href="#" data-filter=".3d">Pembukaan</a>
-              <a href="#" data-filter=".branding">Perlombaan</a>
+              <a href="#" data-filter=".lomba">Perlombaan</a>
               <a href="#" data-filter=".branding">Virtual Bazar</a>
               <a href="#" data-filter=".3d">Webinar</a>
               <a href="#" data-filter=".3d">Tausiyah</a>
@@ -260,7 +260,7 @@ www.4happy-studio.com -->
             </div>
           </div>
 
-          <div class="item 3d col-sm-6 col-md-4 col-lg-4 mb-4">
+          <div class="item lomba col-sm-6 col-md-4 col-lg-4 mb-4">
             <div class="card">
               <a href="https://youtu.be/-l15h5dPsEw" class="item-wrap fancybox">
                 <div class="work-info">
@@ -279,7 +279,7 @@ www.4happy-studio.com -->
             </div>
           </div>
 
-          <div class="item 3d col-sm-6 col-md-4 col-lg-4 mb-4">
+          <div class="item lomba col-sm-6 col-md-4 col-lg-4 mb-4">
             <div class="card">
               <a href="https://youtu.be/-l15h5dPsEw" class="item-wrap fancybox">
                 <div class="work-info">
@@ -298,7 +298,7 @@ www.4happy-studio.com -->
             </div>
           </div>
 
-          <div class="item 3d col-sm-6 col-md-4 col-lg-4 mb-4">
+          <div class="item lomba col-sm-6 col-md-4 col-lg-4 mb-4">
             <div class="card">
               <a href="https://youtu.be/-l15h5dPsEw" class="item-wrap fancybox">
                 <div class="work-info">
@@ -317,7 +317,7 @@ www.4happy-studio.com -->
             </div>
           </div>
 
-          <div class="item 3d col-sm-6 col-md-4 col-lg-4 mb-4">
+          <div class="item lomba col-sm-6 col-md-4 col-lg-4 mb-4">
             <div class="card">
               <a href="https://youtu.be/-l15h5dPsEw" class="item-wrap fancybox">
                 <div class="work-info">
