--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@ www.4happy-studio.com -->
           <div class="col-md-12  text-left text-lg-right" data-aos="fade-up" data-aos-delay="100">
             <div id="filters" class="filters">
               <a href="#" data-filter=".3d" class="active"><b>Semua</b></a>
-              <a href="#" data-filter=".3d">Pembukaan</a>
+              <a href="#" data-filter=".pembuka">Pembukaan</a>
               <a href="#" data-filter=".lomba">Perlombaan</a>
               <a href="#" data-filter=".branding">Virtual Bazar</a>
               <a href="#" data-filter=".3d">Webinar</a>
@@ -203,7 +203,7 @@ www.4happy-studio.com -->
         </div>
         <div id="portfolio-grid" class="row no-gutter" data-aos="fade-up" data-aos-delay="200">
           
-          <div class="item 3d col-sm-6 col-md-4 col-lg-4 mb-4">
+          <div class="item pembuka col-sm-6 col-md-4 col-lg-4 mb-4">
             <div class="card">
               <a href="https://youtu.be/-l15h5dPsEw" class="item-wrap fancybox">
                 <div class="work-info">
