--- a/index.html
+++ b/index.html
@@ -191,12 +191,12 @@ www.4happy-studio.com -->
           </div>
           <div class="col-md-12  text-left text-lg-right" data-aos="fade-up" data-aos-delay="100">
             <div id="filters" class="filters">
-              <a href="#" data-filter=".3d" class="active"><b>Semua</b></a>
+              <a href="#" data-filter="*" class="active"><b>Semua</b></a>
               <a href="#" data-filter=".pembuka">Pembukaan</a>
               <a href="#" data-filter=".lomba">Perlombaan</a>
               <a href="#" data-filter=".branding">Virtual Bazar</a>
-              <a href="#" data-filter=".3d">Webinar</a>
-              <a href="#" data-filter=".3d">Tausiyah</a>
+              <a href="#" data-filter=".webinar">Webinar</a>
+              <a href="#" data-filter=".tausiah">Tausiyah</a>
               <a href="#" data-filter=".branding">Penutupan</a>
             </div>
           </div>
@@ -222,7 +222,7 @@ www.4happy-studio.com -->
             </div>
           </div>
 
-          <div class="item 3d col-sm-6 col-md-4 col-lg-4 mb-4">
+          <div class="item webinar col-sm-6 col-md-4 col-lg-4 mb-4">
             <div class="card">
               <a href="https://youtu.be/-l15h5dPsEw" class="item-wrap fancybox">
                 <div class="work-info">
@@ -241,7 +241,7 @@ www.4happy-studio.com -->
             </div>
           </div>
 
-          <div class="item 3d col-sm-6 col-md-4 col-lg-4 mb-4">
+          <div class="item tausiah col-sm-6 col-md-4 col-lg-4 mb-4">
             <div class="card">
               <a href="https://youtu.be/-l15h5dPsEw" class="item-wrap fancybox">
                 <div class="work-info">
