--- a/tenant/maeteh.html
+++ b/tenant/maeteh.html
@@ -244,7 +244,7 @@ www.4happy-studio.com -->
         
         <p style="padding-top: 20px;" class="card-text">Kain Tenun Cual Siantan - Anambas</p>
         <a href="#" class="btn btn-warning">Beli Disini</a>
-        <a href="#" class="btn btn-success">Whatsapp</a>
+        <a href="https://wa.me/6281317034766" class="btn btn-success">Whatsapp</a>
       </div>
       <div class="card-footer text-muted">
         Deskripsi Produk
