--- a/tenant/tottocraft.html
+++ b/tenant/tottocraft.html
@@ -260,8 +260,8 @@ transform:translate(0, -50%);
         </div>
         
         <p style="padding-top: 20px;" class="card-text">Madinah Hijab Syar’i Premium</p>
-        <a href="#" class="btn btn-warning">Beli Disini</a>
-        <a href="#" class="btn btn-success">Whatsapp</a>
+        <a href="Link Pembayaran Rekening : BRI No. 062101034271504 an. Sudiyanto" class="btn btn-warning">Beli Disini</a>
+        <a href="https://wa.me/6281363904972" class="btn btn-success">Whatsapp</a>
       </div>
       <div class="card-footer text-muted">
         Deskripsi Produk
