--- a/tenant/tottocraftbeli.html
+++ b/tenant/tottocraftbeli.html
@@ -143,7 +143,7 @@ transform:translate(0, -50%);
 
 
 <body>
-  <h1>"Link Pembayaran Rekening : 
+  <h1 class="mt-15">"Link Pembayaran Rekening : 
     BRI No. 062101034271504 an. Sudiyanto"
     </h1>
 </body>
