--- a/tenant/maetehbeli.html
+++ b/tenant/maetehbeli.html
@@ -144,7 +144,7 @@ transform:translate(0, -50%);
 
 <body>
   <h1>"Link Pembayaran Rekening : 
-    BRI No. 062101034271504 an. Sudiyanto"
+    Bank Riau Kepri No. 170-21-04225 an. IESYE KURNIANINGSIH"    
     </h1>
 </body>
 
