--- a/tenant/isnapuring.html
+++ b/tenant/isnapuring.html
@@ -197,7 +197,7 @@ transform:translate(0, -50%);
           ekonomis. Tanaman Eceng Gondok yang terbuang telah menjadi produk unggulan yang alami, tidak hanya menjadi kebutuhan life 
           style tetapi melengkapi dekorasi ruangan yang sangat cantik & natural bagi rumah anda</p>
         <a href="#" class="btn btn-warning">Beli Disini</a>
-        <a href="https://wa.me/6281266015663" class="btn btn-success">Whatsapp</a>
+        <a href="https://wa.me/6281266015663" class="btn btn-success" target="_blank">Whatsapp</a>
       </div>
       <div class="card-footer text-muted">
         Deskripsi Produk
