--- a/tenant/naluna.html
+++ b/tenant/naluna.html
@@ -209,7 +209,7 @@ transform:translate(0, -50%);
         <p style="padding-top: 20px;" class="card-text">Naluna adalah karya seni. Ketulusan yang menuntun kami hingga tidak ada kompromi tentang kualitas yang baik.
          Meyakini dalam kesederhanaan, tersimpan energi besar untuk melakukan lebih banyak kebaikan.</p>
         <a href="https://shopee.co.id/nalunastyle?v=924&smtt=0.0.3" class="btn btn-warning" target="_blank">Beli Disini</a>
-        <a href="https://wa.me/6282268038995" class="btn btn-success">Whatsapp</a>
+        <a href="https://wa.me/6282268038995" class="btn btn-success" target="_blank">Whatsapp</a>
       </div>
       <div class="card-footer text-muted">
         Deskripsi Produk
