--- a/tenant/pranaliving.html
+++ b/tenant/pranaliving.html
@@ -292,7 +292,7 @@ transform:translate(0, -50%);
         
         <p style="padding-top: 20px;" class="card-text">Prana Living dengan Line Fashion Putri Anjani (pa.) merupakan karya inspiratif kekayaan budaya Indonesia yang dipadukan dalam bordir halus sebagai ciri khas produk unggulan</p>
         <a href="https://www.etsy.com/shop/PranaLivingshop" class="btn btn-warning" target="_blank">Beli Disini</a>
-        <a href="https://wa.me/62819677575" class="btn btn-success">Whatsapp</a>
+        <a href="https://wa.me/62819677575" class="btn btn-success" target="_blank">Whatsapp</a>
       </div>
       <div class="card-footer text-muted">
         Deskripsi Produk
