--- a/tenant/tottocraft.html
+++ b/tenant/tottocraft.html
@@ -261,7 +261,7 @@ transform:translate(0, -50%);
         
         <p style="padding-top: 20px;" class="card-text">Madinah Hijab Syar’i Premium</p>
         <a href="https://bikepriexpo.com/tenant/tottocraftbeli.html" class="btn btn-warning">Beli Disini</a>
-        <a href="https://wa.me/6281363904972" class="btn btn-success">Whatsapp</a>
+        <a href="https://wa.me/6281363904972" class="btn btn-success" target="_blank">Whatsapp</a>
       </div>
       <div class="card-footer text-muted">
         Deskripsi Produk
