--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@ www.4happy-studio.com -->
 
           <div class="item lomba col-sm-6 col-md-4 col-lg-4 mb-4">
             <div class="card">
-              <a href="https://youtu.be/-l15h5dPsEw" class="item-wrap fancybox">
+              <a href="https://www.youtube.com/watch?v=5GlHBTPkr4k" class="item-wrap fancybox">
                 <div class="work-info">
                   <h3>MASUK</h3>
                   <p>Klik untuk masuk ke Acara</p>
@@ -293,14 +293,14 @@ www.4happy-studio.com -->
                 <p class="card-text">LOMBA NASYID SYAHFEST 2020</p>
               </div>
               <div class="card-footer">
-                <a href="https://youtu.be/-l15h5dPsEw" class="btn btn-lg btn-block btn-outline-dark btn-square align-items-center">Masuk</a>
+                <a href="https://www.youtube.com/watch?v=5GlHBTPkr4k" class="btn btn-lg btn-block btn-outline-dark btn-square align-items-center">Masuk</a>
               </div>
             </div>
           </div>
 
           <div class="item lomba col-sm-6 col-md-4 col-lg-4 mb-4">
             <div class="card">
-              <a href="https://youtu.be/-l15h5dPsEw" class="item-wrap fancybox">
+              <a href="https://www.youtube.com/watch?v=3x53wYBKFo4" class="item-wrap fancybox">
                 <div class="work-info">
                   <h3>MASUK</h3>
                   <p>Klik untuk masuk ke Acara</p>
@@ -312,14 +312,14 @@ www.4happy-studio.com -->
                 <p class="card-text">LOMBA TARI SYAHFEST 2020</p>
               </div>
               <div class="card-footer">
-                <a href="https://youtu.be/-l15h5dPsEw" class="btn btn-lg btn-block btn-outline-dark btn-square align-items-center">Masuk</a>
+                <a href="https://www.youtube.com/watch?v=3x53wYBKFo4" class="btn btn-lg btn-block btn-outline-dark btn-square align-items-center">Masuk</a>
               </div>
             </div>
           </div>
 
           <div class="item lomba col-sm-6 col-md-4 col-lg-4 mb-4">
             <div class="card">
-              <a href="https://youtu.be/-l15h5dPsEw" class="item-wrap fancybox">
+              <a href="https://www.youtube.com/watch?v=p-izpuNOhWg" class="item-wrap fancybox">
                 <div class="work-info">
                   <h3>MASUK</h3>
                   <p>Klik untuk masuk ke Acara</p>
@@ -331,7 +331,7 @@ www.4happy-studio.com -->
                 <p class="card-text">LOMBA WIRAUSAHA MUDA SYAHFEST 2020</p>
               </div>
               <div class="card-footer">
-                <a href="https://youtu.be/-l15h5dPsEw" class="btn btn-lg btn-block btn-outline-dark btn-square align-items-center">Masuk</a>
+                <a href="https://www.youtube.com/watch?v=p-izpuNOhWg" class="btn btn-lg btn-block btn-outline-dark btn-square align-items-center">Masuk</a>
               </div>
             </div>
           </div>
