--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@ www.4happy-studio.com -->
 
           <div class="item webinar col-sm-6 col-md-4 col-lg-4 mb-4">
             <div class="card">
-              <a href="https://youtu.be/-l15h5dPsEw" class="item-wrap fancybox">
+              <a href="https://youtu.be/VGpZjrbXAXo" class="item-wrap fancybox">
                 <div class="work-info">
                   <h3>MASUK</h3>
                   <p>Klik untuk masuk ke Acara</p>
@@ -236,7 +236,7 @@ www.4happy-studio.com -->
                 <p class="card-text">Webinar menciptakan hub ekonomi syariah di kepri</p>
               </div>
               <div class="card-footer">
-                <a href="https://youtu.be/-l15h5dPsEw" class="btn btn-lg btn-block btn-outline-dark btn-square align-items-center">Masuk</a>
+                <a href="https://youtu.be/VGpZjrbXAXo" class="btn btn-lg btn-block btn-outline-dark btn-square align-items-center">Masuk</a>
               </div>
             </div>
           </div>
