--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@ www.4happy-studio.com -->
 
           <div class="item tausiah col-sm-6 col-md-4 col-lg-4 mb-4">
             <div class="card">
-              <a href="https://youtu.be/-l15h5dPsEw" class="item-wrap fancybox">
+              <a href="https://youtu.be/pNBLKAz0_LE" class="item-wrap fancybox">
                 <div class="work-info">
                   <h3>MASUK</h3>
                   <p>Klik untuk masuk ke Acara</p>
@@ -255,7 +255,7 @@ www.4happy-studio.com -->
                 <p class="card-text">15-45 - 16.45 WIB Tausiah Kepri Syahfest 2020</p>
               </div>
               <div class="card-footer">
-                <a href="https://youtu.be/-l15h5dPsEw" class="btn btn-lg btn-block btn-outline-dark btn-square align-items-center">Masuk</a>
+                <a href="https://youtu.be/pNBLKAz0_LE" class="btn btn-lg btn-block btn-outline-dark btn-square align-items-center">Masuk</a>
               </div>
             </div>
           </div>
