--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@ www.4happy-studio.com -->
       <div class="card-body bg-dark">
       <img src="assets/img/Logo KKI-Color.png" width="200" height="100" alt="" style="margin-bottom: 1%;">
       <p class="card-text text-white"><i>Jelajahi Bazar KKI dengan view 360 derajat menggunakan gawai anda.</i></p>
-      <a href="BI Virtual Expo/index.htm" class="btn btn-light btn-lg"><b>Buka Virtual Bazar KKI</b></a>
+      <a href="BI Virtual Expo KKI/index.htm" class="btn btn-light btn-lg"><b>Buka Virtual Bazar KKI</b></a>
     </div>
     </div>
     <!-- ======= Works Section ======= -->
